--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     color: #787878;
-    font-family: 'PT Sans', 'Arial', serif;
+    font-family: 'PT Sans', serif;
     font-size: 14px;
 }
 .header {
@@ -320,7 +320,7 @@ input[type=radio] {
     background-color: transparent;
     cursor: pointer;
     margin-top: 14px;
-    font-family: 'PT Sans', 'Arial', serif;
+    font-family: 'PT Sans', serif;
     font-weight: bold;
 }
 .button:focus {
