--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
     background: url(image/rating.png) no-repeat;
     background-size: cover;
     position: relative;
-    width: 1358px;
+    width: 100%;
+    max-width: 1358px;
     height: 415px;
     margin: auto;
     text-align: center;
@@ -29,11 +30,10 @@ body {
 .rating_menu {
     width: 100%;
     max-width: 1358px;
-    min-width: 1358px;
     background-color: #7894bc;
     height: 45px;
     margin: 0 auto;
-    margin-bottom: 70px;    
+    margin-bottom: 70px;
     box-shadow: 0px 9px 16px -5px grey;
 }
 
@@ -45,8 +45,7 @@ body {
     position: relative;
 }
 .header_menu ul {
-    max-width: 1040px;
-    margin-left: 190px;
+    max-width: 1000px;
 }
 .rating_menu ul {
     max-width: 830px;
@@ -54,9 +53,6 @@ body {
 .header_menu ul::before {
     content: "NE";
     background: url(image/logo_mini.png);
-    position: absolute;
-    left: 48px;
-    top: 10px;
     width: 40px;
     height: 50px;
     box-sizing: border-box;
@@ -64,6 +60,8 @@ body {
     font-weight: bold;
     font-size: 16px;
     padding: 13px 0px 0 4px;
+    float: left;
+    margin-left: 115px;
 }
 .header_menu ul li,
 .rating_menu ul li {
@@ -87,10 +85,7 @@ body {
     padding: 15px 0;
 }
 .header_menu ul li.registration  {
-    margin-right: 0px;
-    margin-left: 20px;
     text-transform: lowercase;
-    float: right;
 }
 .main {
     position: relative;
