--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-.container-fluid{
-    min-width: 1000px;
+*{
+    box-sizing: border-box;
 }
 body {
     width: 100%;
@@ -10,12 +10,9 @@ body {
     font-size: 14px;
 }
 .header {
-    background: url(image/rating.png) no-repeat;
-    background-size: cover;
     position: relative;
     width: 100%;
     max-width: 1358px;
-    height: 415px;
     margin: auto;
     text-align: center;
 }
@@ -24,14 +21,19 @@ body {
     width: 100%;
     max-width: 1358px;
     background-color: #365165;
-    height: 60px;
+    min-height: 60px;
     margin: 0 auto;
 }
+
+.header_menu img{
+    width: 100%
+}
+
 .rating_menu {
     width: 100%;
     max-width: 1358px;
     background-color: #7894bc;
-    height: 45px;
+    min-height: 45px;
     margin: 0 auto;
     margin-bottom: 70px;
     box-shadow: 0px 9px 16px -5px grey;
@@ -48,6 +50,7 @@ body {
     max-width: 1000px;
 }
 .rating_menu ul {
+    text-align: center;
     max-width: 830px;
 }
 .header_menu ul::before {
@@ -60,8 +63,8 @@ body {
     font-weight: bold;
     font-size: 16px;
     padding: 13px 0px 0 4px;
-    float: left;
-    margin-left: 115px;
+    display: inline-block;
+    margin-left: 4%;
 }
 .header_menu ul li,
 .rating_menu ul li {
@@ -92,6 +95,7 @@ body {
     max-width: 830px;
     margin: 0 auto;
     margin-bottom: 100px;
+    padding: 0 15px;
 }
 .main h1 {
     color: #9BA6B3;
@@ -109,6 +113,7 @@ table {
 }
 table.rating {
     width: 830px;
+    min-width: 100%;
     table-layout: fixed;
     margin:auto;
 }
@@ -133,17 +138,18 @@ table.rating-tab.active {
     color:#787878;
 }
 .rating-cell_left {
-    width: 190px;
     text-align: left;
     padding-left: 35px;
 }
 .rating-title {
+    padding: 0 10px;
     font-weight: bold;
 }
 
 .rating-cell_select {
     padding: 10px 0;
     background-color: #fdfff1;
+    text-align: center;
 }
 
 a.active .rating-cell_select__item::after {
@@ -165,7 +171,6 @@ a.active .rating-cell_select__item::after {
 .rating-cell_select__item {
     border-right: 1px solid #d6d6d4;
     padding: 10px 0 10px 20px;
-    width: 45px;
     position: relative;
 }
 .rating-cell_select:active {
@@ -181,9 +186,6 @@ a.active .rating-cell_select__item::after {
 }
 .rating-cell_left__info {
     background-color: #f0f8fa;
-}
-.rating-title {
-    margin-right: 90px;
 }
 .rating-info {
     margin-right: 90px;
@@ -330,4 +332,9 @@ input[type=radio] {
 .wrap {
     width: 100%;
     max-width: 830px;
+}
+
+.tableall-wrap{
+    max-width: 100%;
+    overflow: auto;
 }
