--- a/style.css
+++ b/style.css
@@ -104,9 +104,9 @@ body {
 .main_info {
     margin-bottom: 60px;
     margin-top: 30px;
-    font-size: 14px;
+    font-size: 15px;
     color: #282828;
-    line-height: 25px;
+    line-height: 30px;
 }
 table {
     border-spacing: 0;
@@ -114,7 +114,10 @@ table {
 }
 table.rating {
     table-layout: fixed;
-    margin:auto;
+    margin: auto;
+    line-height: 25px;
+    font-size: 14px;
+    width: 100%;
 }
 .rating-tab{
 	display:none;
@@ -315,13 +318,15 @@ input[type=radio] {
     color: #fff;
     text-transform: uppercase;
     border: none;
-    background-image: none; 
+    background-image: none;
     background: transparent;
     background-color: transparent;
     cursor: pointer;
-    margin-top: 14px;
+    margin-top: 10px;
     font-family: 'PT Sans', serif;
     font-weight: bold;
+    font-size: 15px;
+    line-height: 25px;
 }
 .button:focus {
     outline: none;
