--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding: 0;
     color: #787878;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'PT Sans', arial, sans-serif;
     font-size: 14px;
 }
 .header {
